--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Susy Grid</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -10,8 +13,8 @@
         <h1>Susy Grid</h1>
     </div>
     <div class="container">
-        <div class="col-xs-4 col-md-8">.col-md-6</div>
-        <div class="col-xs-8 col-md-4">.col-md-6</div>
+        <div class="col-sm-4">.col-md-8</div>
+        <div class="col-sm-8">.col-md-4</div>
     </div>
 </body>
 </html>
