--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Susy Grid</h1>
     </div>
     <div class="container">
-        <div class="col-sm-4">.col-md-8</div>
-        <div class="col-sm-8">.col-md-4</div>
+        <div class="col-sm-4 col-lg-6">.col-md-8</div>
+        <div class="col-sm-8 col-lg-6">.col-md-4</div>
     </div>
 </body>
 </html>
