--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="col-test">Susy Grid</h1>
+        <h1 id="coltest">Susy Grid</h1>
     </div>
     <div class="container">
         <div class="col-sm-4 col-lg-6">.col-md-8</div>
