--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<div class="col-md-8">.col-md-8</div>
 		<div class="col-md-4">.col-md-4</div>
 		<div class="col-md-8 pre-md-2 post-md-2"> .pre-md-2.col-md-8.post-md-2</div>
+		<div class="col-md-3">.col-md-3</div>
 		<div class="col-md-10 pull-md-1">.col-md-10.pull-md-1</div>
 
 	</div>
