--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
 		<h2>screen</h2>
 	</div>
 	<div class="container">
-		<div class="col-md-2">.col-md-2</div>
-		<div class="col-md-2">.col-md-2</div>
-		<div class="col-md-2">.col-md-2</div>
-		<div class="col-md-2">.col-md-2</div>
-		<div class="col-md-2">.col-md-2</div>
-		<div class="col-md-2">.col-md-2</div>
+		<div class="col-md-2"><span>.col-md-2</span></div>
+		<div class="col-md-2"><span>.col-md-2</span></div>
+		<div class="col-md-2"><span>.col-md-2</span></div>
+		<div class="col-md-2"><span>.col-md-2</span></div>
+		<div class="col-md-2"><span>.col-md-2</span></div>
+		<div class="col-md-2"><span>.col-md-2</span></div>
 
-		<div class="col-md-3">.col-md-3</div>
-		<div class="col-md-3">.col-md-3</div>
-		<div class="col-md-3">.col-md-3</div>
-		<div class="col-md-3">.col-md-3</div>
+		<div class="col-md-3"><span>.col-md-3</span></div>
+		<div class="col-md-3"><span>.col-md-3</span></div>
+		<div class="col-md-3"><span>.col-md-3</span></div>
+		<div class="col-md-3"><span>.col-md-3</span></div>
 
-		<div class="col-md-4">.col-md-4</div>
-		<div class="col-md-4">.col-md-4</div>
-		<div class="col-md-4">.col-md-4</div>
+		<div class="col-md-4"><span>.col-md-4</span></div>
+		<div class="col-md-4"><span>.col-md-4</span></div>
+		<div class="col-md-4"><span>.col-md-4</span></div>
 
-		<div class="col-md-6">.col-md-6</div>
-		<div class="col-md-6">.col-md-6</div>
+		<div class="col-md-6"><span>.col-md-6</span></div>
+		<div class="col-md-6"><span>.col-md-6</span></div>
 
-		<div class="col-md-8">.col-md-8</div>
-		<div class="col-md-4">.col-md-4</div>
-		<div class="col-md-8 pre-md-2 post-md-2"> .pre-md-2.col-md-8.post-md-2</div>
-		<div class="col-md-3">.col-md-3</div>
-		<div class="col-md-10 pull-md-1">.col-md-10.pull-md-1</div>
+		<div class="col-md-8"><span>.col-md-8</span></div>
+		<div class="col-md-4"><span>.col-md-4</span></div>
+		<div class="col-md-8 pre-md-2 post-md-2"> <span>.pre-md-2.col-md-8.post-md-2</span></div>
+		<div class="col-md-3"><span>.col-md-3</span></div>
+		<div class="col-md-10 pull-md-1"><span>.col-md-10.pull-md-1</span></div>
 
 	</div>
 </body>
