--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<h1>Susy Grid</h1>
-		<h2>screen</h2>
+		<h2>screen size</h2>
 	</div>
 	<div class="container">
 		<div class="col-md-2"><span>.col-md-2</span></div>
